--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   </head>
   <body>
     <div class="wrapper">
-      <form onSubmit="onSubmit(event);">
+      <form onsubmit="onSubmit(event);">
         <h1 class="title">Todo</h1>
         <input
           type="text"
           name="name"
           class="name"
           placeholder="name"
-          onChange="onChange(event);"
+          onchange="onChange(event);"
           required
         />
         <input type="submit" value="Submit" />
