--- a/todo/index.html
+++ b/todo/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Todo</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Todo</title>
+    <script src="app.js"></script>
+  </head>
+  <body>
+    <div class="wrapper">
+      <h1 class="title">Todo</h1>
+      <input
+        type="text"
+        name="todo"
+        class="todo-input"
+        placeholder="todo"
+        onchange="onChange(event);"
+        required
+      />
+      <button onclick="onSubmit(event);">Submit</button>
+    </div>
+    <div class="todos">
+      <ul class="todo" id="todo-list"></ul>
+    </div>
+    <!---->
+  </body>
 </html>
