--- a/todo/index.html
+++ b/todo/index.html
@@ -5,23 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo</title>
     <script src="app.js"></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="wrapper">
-      <h1 class="title">Todo</h1>
-      <input
-        type="text"
-        name="todo"
-        class="todo-input"
-        placeholder="todo"
-        onchange="onChange(event);"
-        required
-      />
-      <button onclick="onSubmit(event);">Submit</button>
+      <h1 class="title">Hello</h1>
+      <div class="todo-form">
+        <input
+          type="text"
+          name="todo"
+          class="todo-input"
+          placeholder="todo"
+          onchange="onChange(event);"
+          required
+        />
+        <button onclick="onSubmit(event);">Submit</button>
+      </div>
+      <div class="todos">
+        <ul class="todo" id="todo-list"></ul>
+      </div>
     </div>
-    <div class="todos">
-      <ul class="todo" id="todo-list"></ul>
-    </div>
-    <!---->
   </body>
 </html>
