--- a/todo/index.html
+++ b/todo/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <h1 class="title">Hello</h1>
+      <h1 class="title" id="title">Hello</h1>
       <div class="todo-form">
         <input
           type="text"
